# RmkTools

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  compile_flags.txt  lcf.mk  rant.md  temp.txt  utf8.rc
RmkDelocalise/: CMakeLists.txt  RmkDelocalise.cpp  RmkDelocalise.h  RmkDelocalise.hh  filetimes.cpp  find.cpp  getopt.h
RouteDecode/: main.cpp
TxtXyz/: main.c
